# osc-gamemode

./: CMakeLists.txt  README.md  about.md  mod.json
src/: main.cpp
